2010-04-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Eric Seidel.

        Accept XHTML-MP content type as XHTML content
        https://bugs.webkit.org/show_bug.cgi?id=34262

        Add a simple test that fails if XHTML-MP mime
        type is not accepted.

        * http/conf/mime.types: Register XHTML-MP mime
        type with the test server
        * http/tests/xhtmlmp: Added.
        * http/tests/xhtmlmp/xhtml-expected.txt: Added.
        * http/tests/xhtmlmp/xhtml.xhtmlmp: Added. Testcase
        with the newly registered file extension.
2010-04-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        Accept XHTML-MP content type as XHTML content
        https://bugs.webkit.org/show_bug.cgi?id=34262

        Enable processing XHTML-MP mime type as an XHTML document
        even if XHTML-MP support is not enabled.

        * platform/MIMETypeRegistry.cpp:
        (WebCore::initializeSupportedNonImageMimeTypes):
2010-04-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        Accept XHTML-MP content type as XHTML content
        https://bugs.webkit.org/show_bug.cgi?id=34262

        Register xhtmlmp file extension as the new type
        for XHTML-MP test content.

        * Scripts/run-webkit-tests:
        * Scripts/webkitpy/layout_tests/layout_package/test_files.py:
        * Scripts/webkitpy/layout_tests/port/lighttpd.conf:

Canonical link: https://commits.webkit.org/48287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56994 268f45cc-cd09-0410-ab3c-d52691b4dbfc